fix dropdown menus z-index

--- a/src/components/Dropdown/style.css
+++ b/src/components/Dropdown/style.css
@@ -49,6 +49,7 @@
 .Dropdown__items {
   display: none;
   position: absolute;
+  z-index: 1;
   top: 100%;
   left: -15px;
   background: #fff;
